--- a/CSS/micss/style.css
+++ b/CSS/micss/style.css
@@ -80,7 +80,7 @@ main h1 {
     max-width: 600px;
     font-size: 2rem;
     color: #3c90f1;
-    padding: 0 20px 20px 20px;
+    padding: 10px 20px 30px 20px;
     text-align: center;
     margin: 0 auto;
 }
@@ -156,6 +156,9 @@ main .metadata {
 }
 .formatos .glb {
     background-color: gray;
+}
+.formatos .kml {
+    background-color: rgb(37, 75, 94);;
 }
 .formatos a > div {
     margin: 5px;
