--- a/CSS/micss/style.css
+++ b/CSS/micss/style.css
@@ -182,6 +182,7 @@ main .metadata {
     flex-direction: row;
     justify-content: space-between;
     padding: 10px 10px;
+    overflow: hidden;
 }
 .dato h4 {
     width: 35%;
