--- a/dirs/pronostico_48UV/CSS/micss/style.css
+++ b/dirs/pronostico_48UV/CSS/micss/style.css
@@ -92,7 +92,7 @@ main .map_container {
     height: 100vh;
     min-height: 350px;
     max-height: 700px;
-    -webkit-filter: drop-shadow(15px 15px 15px rgb(0, 0, 0));
+    box-shadow: 0px 0px 15px 20px rgba(0,0,0,0.35);
 
 }
 main #map {
@@ -202,7 +202,15 @@ main .metadata {
     background: rgba(0, 0, 0, 0.274);
     margin: 0 auto;
 }
-
+.leyenda {
+    padding-top: 25px;
+    margin: 0 auto;
+}
+.leyenda img {
+    border: 3px solid #ffffff;
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px 12px rgba(0,0,0,0.35);
+}
 
 /* Footer */
 
